--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     }
   },
   "require": {
-    "php": ">=7.2.5",
-    "illuminate/pagination": "^7.0"
+    "php": "^7.3|^8.0",
+    "illuminate/pagination": "^8.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5"
