--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "require": {
     "php": "^8.0",
-    "illuminate/pagination": "^9.0|^10.0|^11.0"
+    "illuminate/pagination": "^9.0|^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5"
